# pmnt_lab_14

./: CLAUDE.md  Makefile  PROMPT_LOG.md  README.md  docker-compose.yml
analysis/: flight_demo.py  requirements.txt
analysis/api/: main.py
analysis/dashboard/: app.py  realtime.html
analysis/flight_client/: __init__.py  client.py
analysis/kafka_consumer/: consumer.py
benchmark/: report.py  runner.py
collector/: go.mod
collector/cmd/collector/: main.go
collector/internal/aggregator/: encode.go  window.go
collector/internal/coordinator/: coordinator.go
collector/internal/fetcher/: openaq.go
collector/internal/flightserver/: server.go
collector/internal/kafkaproducer/: producer.go
collector/internal/metrics/: metrics.go
collector/internal/publisher/: publisher.go
collector/internal/schema/: air_quality.go
collector/internal/validator/: cgo.go  stub.go  validator.go
collector_py/: fetcher.py  main.py  metrics.py  publisher.py
docker/: Dockerfile.analysis  Dockerfile.collector
k8s/: analysis.yaml  collector.yaml  etcd.yaml  hpa.yaml  kafka.yaml  keda-scaledobject.yaml  nats.yaml  prometheus.yaml
validator/: Cargo.toml  pyproject.toml  validator.h
validator/src/: lib.rs  rules.rs  types.rs
